declare and configur-maven-plugin in sokybot-core module